--- a/local.env.example
+++ b/local.env.example
@@ -1,12 +1,15 @@
-# CyberArk PAS vars
-# Do NOT append "/PasswordVault/" to the endpoint
-PAS_ENDPOINT="https://pasvault.example.com"
-PAS_USER="myadmin"
-PAS_PASS="user password"
-
-
-# HC Vault vars
+### HC Vault vars
+#
+# NOTE: you will be prompted for the vault token
+#
 VAULT_ADDR="https://hcvault.example.com:8200"
 VAULT_SKIP_VERIFY=false   # Use only if using self-signed certificate
-VAULT_TOKEN="api token"
 
+
+### CyberArk PAS vars
+#
+# NOTE: you will be prompted for the PAS user AND password
+#
+
+# Do NOT append "/PasswordVault/" to the endpoint
+PAS_ENDPOINT="https://pasvault.example.com"
